# Print-without-Black

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  color_swap.py
